# techpulse

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  cleanup.sh  docker-run.sh  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
database/: 00_DeleteEverything.sql  01_CreateTables.sql  02_SampleData.sql  README.md  install-database.sh
infra/: readme.md
src/crawler/: Dockerfile  __init__.py  core_0.py  core_1.py  core_2.py  crawler_app.py  main.py  orm_example.py  the_old_way.py
src/crawler/models/: __init__.py  article.py  article_favorite.py  base.py  feed_favorite.py  rss_feed.py  user.py
src/crawler/parsers/: __init__.py  rss_feed_parser.py
src/front-end/: README.md  app.py
src/front-end/blueprints/: __init__.py  articles_blueprint.py  base_blueprint.py
src/front-end/models/: __init__.py  base.py  pokemon.py
src/front-end/services/: __init__.py  article_service.py  base_service.py  rss_service.py
src/front-end/templates/: base.html
src/front-end/templates/articles/: article.html  articles.html
src/front-end/templates/pokemon/: pokemon.html
src/web-api/: Dockerfile  app.py  main.py
src/web-api/services/: __init__.py  article_service.py  base_service.py  rss_service.py
