[tool.poetry]
name = "techpulse"
version = "0.1.0"
description = "Learning app for a team studying Python"
authors = ["Chris Roberts <chris@frostfireai.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
flask = "^2.3.3"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
